# nc2parquet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE.md  README.md  codecov.yml  dist-workspace.toml
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml  publish.yml
benches/: combination_bench.rs  extraction_bench.rs  filter_bench.rs  postprocess_bench.rs
docs/adr/: 0001-error-handling-strategy.md  0002-module-structure-and-visibility.md  0003-storage-abstraction.md  0004-post-processing-pipeline-design.md  README.md
docs/tutorials/: README.md  basic-conversion.md  batch-processing.md  config-files.md  filtered-extraction.md
plans/nc2parquet-quality-upgrade/: .implementation-state.json  00-master-plan.md  README.md
plans/nc2parquet-quality-upgrade/epic-01-testing/: 00-epic-overview.md  ticket-001-add-test-dependencies-and-helpers.md  ticket-002-reorganize-tests-into-modules.md  ticket-003-unit-tests-filters-edge-cases.md  ticket-004-unit-tests-extract-edge-cases.md  ticket-005-unit-tests-postprocess-edge-cases.md  ticket-006-unit-tests-output-storage.md  ticket-007-property-based-tests.md  ticket-008-integration-tests-error-paths.md
plans/nc2parquet-quality-upgrade/epic-02-code-quality/: 00-epic-overview.md  ticket-009-extract-handlers-from-main.md  ticket-010-improve-error-types.md  ticket-011-audit-visibility-modifiers.md  ticket-012-add-exhaustive-rustdoc.md  ticket-013-remove-dead-code-fix-clippy.md
plans/nc2parquet-quality-upgrade/epic-03-performance/: 00-epic-overview.md  learnings.md  ticket-014-add-criterion-benchmark-suite.md  ticket-015-implement-chunked-netcdf-reading.md  ticket-016-reduce-allocation-overhead-extraction.md  ticket-017-parallelize-postprocessor-executions.md  ticket-018-profile-optimize-peak-memory.md
plans/nc2parquet-quality-upgrade/epic-04-features/: 00-epic-overview.md  learnings.md  ticket-019-extend-unit-converter-meteorological.md  ticket-020-add-glob-pattern-batch-processing.md  ticket-021-multi-variable-extraction.md  ticket-022-parquet-output-configuration.md  ticket-023-extend-formula-parser-functions.md
plans/nc2parquet-quality-upgrade/epic-05-documentation/: 00-epic-overview.md  learnings.md  ticket-024-rewrite-readme-professional.md  ticket-025-create-changelog.md  ticket-026-create-contributing-guide.md  ticket-027-write-architecture-decision-records.md  ticket-028-create-usage-tutorials.md
plans/nc2parquet-quality-upgrade/epic-06-cicd/: 00-epic-overview.md  learnings.md  ticket-029-add-codecov-coverage-reporting.md  ticket-030-add-benchmark-regression-ci.md  ticket-031-automate-release-cargo-dist.md  ticket-032-add-cross-compilation-ci-matrix.md  ticket-033-add-integration-test-ci-job.md
plans/nc2parquet-quality-upgrade/learnings/: epic-01-summary.md  epic-02-summary.md  epic-03-summary.md  epic-04-summary.md  epic-05-summary.md  epic-06-summary.md
src/: cli.rs  errors.rs  extract.rs  filters.rs  info.rs  input.rs  lib.rs  main.rs  output.rs  postprocess.rs  storage.rs  test_helpers.rs
src/handlers/: completions.rs  config.rs  convert.rs  info.rs  mod.rs  template.rs  utils.rs  validate.rs
src/tests/: mod.rs  test_batch.rs  test_cli.rs  test_extract.rs  test_filters.rs  test_info.rs  test_input.rs  test_integration.rs  test_memory_profile.rs  test_multi_variable.rs  test_output.rs  test_postprocess.rs  test_properties.rs
