[package]
name = "nc2parquet"
version = "0.1.1"
edition = "2024"
description = "High-performance NetCDF to Parquet converter with cloud storage support"
authors = ["Rogerio Malves <rjmalves@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rjmalves/nc2parquet"
repository = "https://github.com/rjmalves/nc2parquet"
keywords = ["netcdf", "parquet", "climate", "data", "conversion"]
categories = ["command-line-utilities", "science", "data-structures"]

[[bin]]
name = "nc2parquet"
path = "src/main.rs"

[dependencies]
aws-config = "1.8.6"
aws-sdk-s3 = "1.106.0"
netcdf = { version = "0.11.0", features = ["static"] }
polars = { version = "0.51.0", features = ["lazy", "parquet"] }
serde = "1.0.226"
serde_json = "1.0.145"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env", "color"] }
clap_complete = "4.4"
env_logger = "0.11"
log = "0.4"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.8"
testcontainers = { version = "0.22", features = ["blocking"] }
testcontainers-modules = { version = "0.10", features = ["localstack"] }
tokio-test = "0.4"
aws-credential-types = "1.2"
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
